<resources>
    <string name="app_name">Sofra</string>
    <string name="make_order">make order</string>
    <string name="sale_food">sale food</string>
    <string name="user_about_app">this page only to show what is this app </string>
    <string name="restaurant_commission">Please transfer 10% of total profit in maximum time one month</string>
    <string name="rety">Rety</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="setting">Setting</string>
    <string name="choose_rating">Choose rating</string>
    <string name="write_your_review">write your review</string>
    <string name="add_review">add review</string>
    <string name="category_image">Category image</string>
    <string name="category_name">Category Name</string>
    <string name="add_category">Add Category</string>
    <string name="sure_about_logout">Sure About LogOut ?</string>
    <string name="commission">Commission</string>
    <string name="restaurant_sales">Restaurant Sales :</string>
    <string name="app_commission">App Commission :</string>
    <string name="paid">Paid :</string>
    <string name="remaining_amount">Remaining Amount :</string>
    <string name="ahly_bnak_651350130135">Ahly Bnak : 651350130135</string>
    <string name="alex_bnak_168416151684">Alex Bnak : 168416151684</string>
    <string name="account_name_sofra">ِAccount Name : Sofra</string>
    <string name="order_details">Order Details</string>
    <string name="write_notes">write notes</string>
    <string name="order_address">Order Address</string>
    <string name="payment">Payment</string>
    <string name="cash">Cash</string>
    <string name="online_payment">Online Payment</string>
    <string name="total">Total :</string>
    <string name="total_amount">Total Amount :</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="order_date">Order Date : </string>
    <string name="address">Address :</string>
    <string name="meal_name">Meal Name :</string>
    <string name="order_price">Order Price :</string>
    <string name="call">Call</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delivery_fees_">Delivery Fees :</string>
    <string name="add_image_item">Add image item</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="item_price">Item price</string>
    <string name="item_offer_price">Item offer price</string>
    <string name="add_item">Add Item</string>
    <string name="add_offer_image">Add offer image</string>
    <string name="offer_name">Offer Name</string>
    <string name="offer_description">Offer Description</string>
    <string name="from">From</string>
    <string name="till">Till</string>
    <string name="add_offer">Add Offer</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirmation_new_password">Confirmation new password</string>
    <string name="change">Change</string>
    <string name="reviews">Reviews</string>
    <string name="name">Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="minimum_deli_very">Minimum Delivery</string>
    <string name="minimum_deli_very_">Minimum Delivery :</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="phone">Phone</string>
    <string name="contact_information">Contact Information</string>
    <string name="state">State</string>
    <string name="state_">State :</string>
    <string name="edit">Edit</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="create_new_account">create new account</string>
    <string name="no_menu_item_yet">No Menu Item Yet</string>
    <string name="more_setting">More Setting</string>
    <string name="offers">Offers</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_app">About App</string>
    <string name="rating_and_comments">Rating and Comments</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_new_offer">Add New Offer</string>
    <string name="delivery_duration">Delivery Duration</string>
    <string name="continue_">continue</string>

    <string name="confirmation_order">Confirmation Order</string>
    <string name="add_more">Add More</string>
    <string name="total_price">Total Price :</string>
    <string name="what_is_your_message">What is your Message ?</string>
    <string name="complaint">Complaint</string>
    <string name="suggestion">Suggestion</string>
    <string name="enquiry">Enquiry</string>
    <string name="send">send</string>
    <string name="please_enter_your_mail">Please Enter Your Mail</string>
    <string name="please_enter_verify_code">Please Enter Verify Code</string>
    <string name="meal_details">meal details :</string>
    <string name="meal_price">meal price :</string>
    <string name="special_order">Special Order</string>
    <string name="write_here">write here</string>
    <string name="quantity">Quantity</string>
    <string name="offer_details">Offer Details</string>
    <string name="from_">From :</string>
    <string name="till_">Till :</string>
    <string name="get_now">Get Now</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="register">Register</string>
    <string name="town">Town :</string>
    <string name="city">City :</string>
    <string name="town2">Town</string>
    <string name="city2">City</string>
    <string name="happy_to_see_your_review">Happy to see your review</string>
    <string name="price">Price</string>
    <string name="client_">Client :</string>
    <string name="order_no_">Order No. :</string>
    <string name="details">details</string>
    <string name="delivery_cost">Delivery Cost :</string>
    <string name="minimum_order">Minimum Order :</string>
    <string name="market_photo">Market Photo</string>
    <string name="delivery_fees">Delivery Fees</string>
    <string name="completed_order">Completed Order</string>
    <string name="confirm_delivery">Confirm Delivery</string>
    <string name="complete_information">Please Complete Register Information</string>

    <string name="menu">menu</string>
    <string name="review">review</string>
    <string name="info">info</string>
    <!--Validation For Toast-->
    <string name="progress_please_wait">Please Wait…</string>
    <string name="user_or_pass_incorrect">user or password not correct</string>
    <string name="please_enter_name">please enter name</string>
    <string name="please_enter_password">please enter password</string>
    <string name="please_enter_old_password">please enter old password</string>
    <string name="please_enter_confirmation_password">please enter confirmation password</string>
    <string name="please_enter_price">please enter price</string>
    <string name="please_enter_offer_price">please enter offer price</string>
    <string name="please_select_photo">please select photo</string>
    <string name="please_enter_description">please enter description</string>
    <string name="shopping_cart_empty">shopping cart is empty</string>
    <string name="old_password_didnot_match">old password didn\'t match</string>
    <string name="confirmation_password_did_not_match">confirmation password didn\'t match</string>
    <string name="please_select_dates">please select dates</string>
    <string name="please_enter_cancelation_reason">please enter cancelation reason</string>
    <string name="please_select_review">please select review</string>
    <string name="please_write_review">please write review</string>
    <string name="added_to_cart">added to cart</string>
    <string name="log_out">Log out</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="choose_language">Choose Language</string>
    <string name="write_cancelation_reason">Write Cancelation Reason</string>
    <string name="cancelation_reason">Cancelation Reason</string>
    <string name="theme">Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">dark theme</string>
    <string name="loading">Loading...</string>


</resources>
