<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_sheet_language_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_shape_top_radius"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/white_shape_top_radius"
        android:fontFamily="@font/cairo"
        android:padding="@dimen/_4sdp"
        android:text="@string/choose_language"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/dialog_sheet_language_btn_eng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/gradient_btn_shape"
        android:fontFamily="@font/cairo"
        android:text="@string/english"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/dialog_sheet_language_btn_arabic"
        style="@style/margin_paddingSETB8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_btn_shape"
        android:fontFamily="@font/cairo"
        android:text="@string/arabic"
        android:textColor="@color/white"
        android:textStyle="bold" />


</LinearLayout>