<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dim_16dp"
                android:layout_marginBottom="@dimen/dim_16dp"
                android:fontFamily="@font/cairo"
                android:text="@string/order_details"
                android:textColor="@color/blue"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/order_confirmation_fragment1_et_notes"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="@dimen/dim_16dp"
                android:layout_marginEnd="@dimen/dim_16dp"
                android:background="@drawable/shadow_gray_shape"
                android:fontFamily="@font/cairo"
                android:gravity="start"
                android:hint="@string/write_notes"
                android:padding="@dimen/dim_16dp"
                android:textColorHint="#606BAF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_16dp"
                android:layout_marginTop="@dimen/dim_16dp"
                android:layout_marginEnd="@dimen/dim_16dp"
                android:fontFamily="@font/cairo"
                android:text="@string/order_address"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/order_confirmation_fragment1_tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_16dp"
                android:layout_marginEnd="@dimen/dim_16dp"
                android:fontFamily="@font/cairo"
                android:text="@string/order_address"
                android:textColor="@color/pink"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_16dp"
                android:layout_marginTop="@dimen/dim_16dp"
                android:layout_marginEnd="@dimen/dim_16dp"
                android:fontFamily="@font/cairo"
                android:text="@string/payment"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/user_contact_us_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_30dp"
                android:layout_marginTop="@dimen/dim_16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/user_contact_us_rb_complaint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:button="@drawable/shape_check_box"
                        android:fontFamily="@font/cairo"
                        android:text="@string/cash"
                        android:textColor="@color/blue"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/user_contact_us_rb_enquiry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/shape_check_box"
                        android:fontFamily="@font/cairo"
                        android:text="@string/online_payment"
                        android:textColor="@color/blue"
                        android:textSize="16sp" />
                </LinearLayout>
            </RadioGroup>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_16dp"
                android:layout_marginTop="@dimen/dim_16dp"
                android:layout_marginEnd="@dimen/dim_16dp"
                app:cardCornerRadius="@dimen/dim_16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dim_16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cairo"
                            android:text="@string/total"
                            android:textColor="@color/blue"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/order_confirmation_fragment1_tv_total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cairo"
                            android:textColor="@color/blue"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cairo"
                            android:text="@string/delivery_fees"
                            android:textColor="@color/blue"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/order_confirmation_fragment1_tv_delivery_fees"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cairo"
                            android:textColor="@color/blue"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_amount"
                            android:fontFamily="@font/cairo"
                            android:textColor="@color/blue"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/order_confirmation_fragment1_tv_total_amount"
                            android:layout_width="wrap_content"
                            android:fontFamily="@font/cairo"
                            android:layout_height="wrap_content"
                            android:textColor="@color/blue"
                            android:textSize="16sp" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/order_confirmation_fragment1_order_confirmation"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dim_16dp"
                android:background="@drawable/gradient_btn_shape"
                android:fontFamily="@font/cairo"
                android:text="@string/order_confirmation"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>