<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/restaurant_add_offer_fragment_tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/cairo"
                android:text="@string/add_offer_image"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dim_16dp"
                app:cardCornerRadius="@dimen/dim_20dp">

                <ImageView
                    android:id="@+id/restaurant_add_offer_fragment_img_add_photo"
                    android:layout_width="@dimen/dim_100dp"
                    android:layout_height="@dimen/dim_100dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_add_image_icon" />
            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/restaurant_add_offer_fragment_et_offer_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_50dp"
                android:background="@drawable/shadow_white_shape"
                android:hint="@string/offer_name"
                android:paddingStart="@dimen/dim_16dp"
                android:paddingEnd="@dimen/dim_16dp" />

            <EditText
                android:id="@+id/restaurant_add_offer_fragment_et_offer_description"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/dim_16dp"
                android:background="@drawable/shadow_white_shape"
                android:gravity="start"
                android:hint="@string/offer_description"
                android:padding="@dimen/dim_16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dim_30dp"
                    android:layout_weight="1"
                    android:background="@drawable/gray_shape">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/dim_16dp"
                        android:src="@drawable/ic_blue_calendar" />

                    <TextView
                        android:id="@+id/restaurant_add_offer_fragment_et_date_from"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dim_50dp"
                        android:layout_marginStart="@dimen/dim_8dp"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/from"
                        android:textColorHint="@color/blue" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/gray_shape">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/dim_16dp"
                        android:src="@drawable/ic_blue_calendar" />

                    <TextView
                        android:id="@+id/restaurant_add_offer_fragment_et_date_till"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dim_50dp"
                        android:layout_marginStart="@dimen/dim_8dp"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/till"
                        android:textColorHint="@color/blue" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/restaurant_add_offer_fragment_btn_add_offer"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dim_16dp"
                android:background="@drawable/gradient_btn_shape"
                android:gravity="center"
                android:text="@string/add_offer"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>