<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/restaurant_login_background_dish">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_16dp"
                android:layout_marginTop="@dimen/dim_40dp"
                android:fontFamily="@font/cairo"
                android:text="@string/contact_information"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/restaurant_register2_fragment_et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:drawableStart="@drawable/ic_white_phone"
                    android:hint="@string/phone"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/restaurant_register2_fragment_et_phone_whatsapp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:drawableStart="@drawable/ic_white_whatsapp"
                    android:hint="@string/whatsapp"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_16dp"
                android:layout_marginTop="@dimen/dim_16dp"
                android:fontFamily="@font/cairo"
                android:text="@string/market_photo"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dim_100dp"
                android:layout_height="@dimen/dim_90dp"
                android:layout_marginStart="@dimen/dim_16dp"
                android:layout_marginTop="@dimen/dim_16dp"
                android:padding="@dimen/dim_40dp"
                app:cardCornerRadius="@dimen/dim_16dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/restaurant_register2_fragment_img_add_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dim_24dp"
                    android:background="@drawable/ic_blue_shop"
                    android:scaleType="fitXY" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/restaurant_register2_fragment_btn_register"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dim_40dp"
                android:background="@drawable/gradient_btn_shape"
                android:fontFamily="@font/cairo"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
